# tarides_map_static_website

./: Makefile  dune.build  dune.config
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/.dune/default/duniverse/stdlib-shims/src/: dune  dune.ml
_build/default/: dune  dune-project  dune-workspace  https-macosx.opam.locked  static_tls.ml  static_tls.mli
duniverse/Zarith/: dune  dune-project  zarith.opam
duniverse/ca-certs/: ca-certs.opam  dune-project
duniverse/ca-certs-nss/: ca-certs-nss.opam  dune-project
duniverse/happy-eyeballs/: dune-project  happy-eyeballs-lwt.opam  happy-eyeballs-mirage.opam  happy-eyeballs.opam
duniverse/io-page/: dune-project  io-page.opam
duniverse/mirage/: dune-project  functoria-runtime.opam  functoria.opam  mirage-runtime.opam  mirage.opam
duniverse/mirage-channel/: README.md  dune-project  mirage-channel.opam
duniverse/mirage-kv/: dune-project  mirage-kv.opam
duniverse/mirage-tcpip/: dune-project  tcpip.opam
duniverse/mirage-unix/: dune-project  mirage-unix.opam
duniverse/ocaml-crunch/: crunch.opam  dune-project
duniverse/ocaml-dns/: README.md  dns-certify.opam  dns-cli.opam  dns-client.opam  dns-mirage.opam  dns-resolver.opam  dns-server.opam  dns-stub.opam  dns-tsig.opam  dns.opam  dnssec.opam  dune-project
duniverse/ocaml-gmp/: dune-project  gmp.opam
duniverse/ocaml-vchan/: dune-project  vchan-unix.opam  vchan-xen.opam  vchan.opam
duniverse/ocaml-xenstore/: dune-project  xenstore.opam
htdocs/: index.html
htdocs/data/: point.geojson
mirage/: dune-workspace.config  main.ml
(+4314 files in other folders)
