
(library
 (wrapped false)
 (name stdlib_shims)
 (modules )
 (public_name stdlib-shims))

(rule
 (with-stdout-to stdlib.ml
  (echo "\
module Uchar        = Uchar
module Arg          = Arg
module Array        = Array
module ArrayLabels  = ArrayLabels
module Buffer       = Buffer
module Bytes        = Bytes
module BytesLabels  = BytesLabels
module Callback     = Callback
module Char         = Char
module Complex      = Complex
module Digest       = Digest
module Filename     = Filename
module Format       = Format
module Gc           = Gc
module Genlex       = Genlex
module Hashtbl      = Hashtbl
module Int32        = Int32
module Int64        = Int64
module Lazy         = Lazy
module Lexing       = Lexing
module List         = List
module ListLabels   = ListLabels
module Map          = Map
module Marshal      = Marshal
module MoreLabels   = MoreLabels
module Nativeint    = Nativeint
module Obj          = Obj
module Oo           = Oo
module Parsing      = Parsing
module Pervasives   = Pervasives
module Printexc     = Printexc
module Printf       = Printf
module Queue        = Queue
module Random       = Random
module Scanf        = Scanf
module Set          = Set
module Stack        = Stack
module StdLabels    = StdLabels
module Stream       = Stream
module String       = String
module StringLabels = StringLabels
module Sys          = Sys
module Weak         = Weak

include Pervasives
")))
